# Qt-QML-Image

./: CMakeLists.txt  Main.qml  README.md  Resource.qrc  main.cpp
